update dependency injector for default args

--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,41 +31,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "registered huhu: <class '__main__.HUHU'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@factory.register('huhu')\n",
     "class HUHU(F.AutoPipe):\n",
     "\n",
-    "    def __init__(self, name, age):\n",
+    "    def __init__(self, name, age, test=5):\n",
     "        super().__init__()\n",
     "        self.name = name\n",
-    "        self.age = age"
+    "        self.age = age\n",
+    "        self.test = test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "registered hehe: <class '__main__.HEHE'>\n",
-      "registered hihi: <class '__main__.HEHE'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@factory.register('hehe', 'hihi')\n",
     "class HEHE(F.AutoPipe):\n",
@@ -85,17 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "registered haha: <class '__main__.HAHA'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@factory.register('haha')\n",
     "class HAHA(F.AutoPipe):\n",
@@ -108,33 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'haha': HAHA(\n",
-       " \thehe=HEHE(\n",
-       " \t\thuhu=HUHU(\n",
-       " \t\t\tname='a',\n",
-       " \t\t\tage='loli',\n",
-       " \t\t),\n",
-       " \t),\n",
-       " \thuhu=HUHU(\n",
-       " \t\tname='a',\n",
-       " \t\tage='loli',\n",
-       " \t),\n",
-       " )}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "objs = injector.run({'name': 'a', 'age': 'loli'}, 'haha')\n",
+    "objs = injector.run({'name': 'a', 'age': 'hehe'}, 'haha')\n",
     "objs"
    ]
   },
@@ -162,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
