--- a/tests/test_queue.ipynb
+++ b/tests/test_queue.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/thanh/development/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -39,60 +39,46 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ProcessQueue(\n",
-       "\tpersistent=False,\n",
-       "\tn=2,\n",
-       ")"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0000000001\n",
-      "\n",
-      "0000200003\n",
-      "\n",
-      "0000400005\n",
-      "\n",
-      "0000600007\n",
-      "\n",
-      "0000800009\n",
-      "\n",
-      "0001000011\n",
-      "\n",
-      "0001200013\n",
-      "\n",
-      "0001400015\n",
-      "\n",
-      "0001600017\n",
-      "\n",
-      "0001800019\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "q = queues.ProcessQueue(n=2)\\\n",
+    "q = queues.ThreadQueue(n=5)\\\n",
     "    .register_callback(lambda x: f'{x:05d}')\\\n",
     "    .chain(print)\\\n",
-    "    .run()\n",
-    "q"
+    "    .run()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00000\n",
+      "00001\n",
+      "00002\n",
+      "00003\n",
+      "00004\n",
+      "00005\n",
+      "00006\n",
+      "00007\n",
+      "00008\n",
+      "00009\n",
+      "00010\n",
+      "00011\n",
+      "00012\n",
+      "00013\n",
+      "00014\n",
+      "00015\n",
+      "00016\n",
+      "00017\n",
+      "00018\n",
+      "00019\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(20):\n",
     "    q.put(i)"
@@ -100,12 +86,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "q.release()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
