--- a/tests/test_configs.ipynb
+++ b/tests/test_configs.ipynb
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/thanh/development/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -44,7 +44,15 @@
     {
      "data": {
       "text/plain": [
-       "{}"
+       "HAHA\n",
+       "  haha = 5\n",
+       "  hehe = 4\n",
+       "\n",
+       "  HEHE\n",
+       "    hihi = 8\n",
+       "\n",
+       "  HUHU\n",
+       "    hichic = 10"
       ]
      },
      "execution_count": 3,
@@ -53,8 +61,17 @@
     }
    ],
    "source": [
-    "factory = meta.ObjectFactory()\n",
-    "factory"
+    "class HAHA(F.Configs):\n",
+    "    haha = 5\n",
+    "    hehe = 4\n",
+    "\n",
+    "    class HEHE(F.Configs):\n",
+    "        hihi = 8\n",
+    "    \n",
+    "    class HUHU(F.Configs):\n",
+    "        hichic = 10\n",
+    "\n",
+    "HAHA"
    ]
   },
   {
@@ -63,53 +80,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "registered haha: <class '__main__.HAHA'>\n",
-      "registered hehe: <class '__main__.HEHE'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "@factory.register('haha')\n",
-    "class HAHA(F.BaseConfigs):\n",
-    "    haha = 5\n",
-    "    hehe = 4\n",
-    "\n",
-    "@factory.register('hehe')\n",
-    "class HEHE(F.BaseConfigs):\n",
-    "    haha = 8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "{'haha': HAHA(\n",
-       " \thaha=5,\n",
-       " \thehe=4,\n",
-       " \thihi=HIHI(\n",
-       " \t\thihi=8,\n",
-       " \t),\n",
-       " ),\n",
-       " 'hehe': HEHE(\n",
-       " \thaha=8,\n",
-       " )}"
+       "HAHA\n",
+       "  haha = 10\n",
+       "  hehe = 4\n",
+       "\n",
+       "  HEHE\n",
+       "    hihi = 8\n",
+       "\n",
+       "  HUHU\n",
+       "    hichic = 10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "configs_dict = meta.ConfigsDict(factory)\n",
-    "configs_dict"
+    "HAHA.update({'haha': 10})"
    ]
   },
   {
