revamp update method of configs

--- a/tests/test_configs.ipynb
+++ b/tests/test_configs.ipynb
@@ -47,6 +47,7 @@
        "HAHA\n",
        "  haha = 5\n",
        "  hehe = 4\n",
+       "  test = {'haha': 7}\n",
        "\n",
        "  HEHE\n",
        "    hihi = 8\n",
@@ -64,6 +65,7 @@
     "class HAHA(F.Configs):\n",
     "    haha = 5\n",
     "    hehe = 4\n",
+    "    test = {'haha': 7}\n",
     "\n",
     "    class HEHE(F.Configs):\n",
     "        hihi = 8\n",
@@ -85,9 +87,10 @@
        "HAHA\n",
        "  haha = 10\n",
        "  hehe = 4\n",
+       "  test = {'haha': 10}\n",
        "\n",
        "  HEHE\n",
-       "    hihi = 8\n",
+       "    hihi = 1\n",
        "\n",
        "  HUHU\n",
        "    hichic = 10"
@@ -99,7 +102,7 @@
     }
    ],
    "source": [
-    "HAHA.update({'haha': 10})"
+    "HAHA.update(haha=10, hihi=1)"
    ]
   },
   {
