update configs framework

--- a/tests/test_configs.ipynb
+++ b/tests/test_configs.ipynb
@@ -40,40 +40,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "HAHA\n",
-       "  haha = 5\n",
-       "  hehe = 4\n",
-       "  test = {'haha': 7}\n",
-       "\n",
-       "  HEHE\n",
-       "    hihi = 8\n",
-       "\n",
-       "  HUHU\n",
-       "    hichic = 10"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class HAHA(F.Configs):\n",
-    "    haha = 5\n",
-    "    hehe = 4\n",
-    "    test = {'haha': 7}\n",
+    "class HEHE(F.BaseConfigs):\n",
+    "    hihi = 8\n",
     "\n",
-    "    class HEHE(F.Configs):\n",
-    "        hihi = 8\n",
-    "    \n",
-    "    class HUHU(F.Configs):\n",
-    "        hichic = 10\n",
+    "class HUHU(F.BaseConfigs):\n",
+    "    hichic = 10\n",
     "\n",
-    "HAHA"
+    "class HAHA(F.BaseConfigs):\n",
+    "    a = 5\n",
+    "    b = 4\n",
+    "    hihi: HEHE\n",
+    "    huhu: HUHU\n",
+    "\n",
+    "class New_HAHA(HAHA):\n",
+    "    huhu: HEHE"
    ]
   },
   {
@@ -84,16 +66,16 @@
     {
      "data": {
       "text/plain": [
-       "HAHA\n",
-       "  haha = 10\n",
-       "  hehe = 4\n",
-       "  test = {'haha': 10}\n",
-       "\n",
-       "  HEHE\n",
-       "    hihi = 1\n",
-       "\n",
-       "  HUHU\n",
-       "    hichic = 10"
+       "New_HAHA(\n",
+       "\ta=5,\n",
+       "\tb=4,\n",
+       "\thihi=HEHE(\n",
+       "\t\thihi=8,\n",
+       "\t),\n",
+       "\thuhu=HEHE(\n",
+       "\t\thihi=8,\n",
+       "\t),\n",
+       ")"
       ]
      },
      "execution_count": 4,
@@ -102,7 +84,7 @@
     }
    ],
    "source": [
-    "HAHA.update(haha=10, hihi=1)"
+    "New_HAHA()"
    ]
   },
   {
