--- a/tests/test_configs.ipynb
+++ b/tests/test_configs.ipynb
@@ -48,14 +48,14 @@
     "class HUHU(F.BaseConfigs):\n",
     "    hichic = 10\n",
     "\n",
-    "class HAHA(F.BaseConfigs):\n",
+    "class HAHA(HEHE):\n",
     "    a = 5\n",
     "    b = 4\n",
     "    hihi: HEHE\n",
     "    huhu: HUHU\n",
     "\n",
     "class New_HAHA(HAHA):\n",
-    "    huhu: HEHE"
+    "    keke: HAHA"
    ]
   },
   {
@@ -67,14 +67,24 @@
      "data": {
       "text/plain": [
        "New_HAHA(\n",
-       "\ta=5,\n",
-       "\tb=4,\n",
-       "\thihi=HEHE(\n",
-       "\t\thihi=8,\n",
-       "\t),\n",
-       "\thuhu=HEHE(\n",
-       "\t\thihi=8,\n",
-       "\t),\n",
+       "  a=5,\n",
+       "  b=4,\n",
+       "  hihi=HEHE(\n",
+       "    hihi=8,\n",
+       "  ),\n",
+       "  huhu=HUHU(\n",
+       "    hichic=10,\n",
+       "  ),\n",
+       "  keke=HAHA(\n",
+       "    a=5,\n",
+       "    b=4,\n",
+       "    hihi=HEHE(\n",
+       "      hihi=8,\n",
+       "    ),\n",
+       "    huhu=HUHU(\n",
+       "      hichic=10,\n",
+       "    ),\n",
+       "  ),\n",
        ")"
       ]
      },
