add none propagator

--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -21,7 +21,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import plasma.parallel_processing as pp\n",
     "import time"
@@ -51,13 +60,13 @@
      "data": {
       "text/plain": [
        "compute1-<class '__main__.Inner'>\n",
-       "\tcompute1-<function compute at 0x7f53d6ca5f80>\n",
-       "\tcompute2-<function compute at 0x7f53d6ca5f80>\n",
-       "compute2-<function compute at 0x7f53d6ca5f80>\n",
+       "\tcompute1-<function compute at 0x7f10742463e0>\n",
+       "\tcompute2-<function compute at 0x7f10742463e0>\n",
+       "compute2-<function compute at 0x7f10742463e0>\n",
        "compute3-<class '__main__.Inner'>\n",
-       "\tcompute1-<function compute at 0x7f53d6ca5f80>\n",
-       "\tcompute2-<function compute at 0x7f53d6ca5f80>\n",
-       "printer-<function print_pass at 0x7f53d6ca6700>\n",
+       "\tcompute1-<function compute at 0x7f10742463e0>\n",
+       "\tcompute2-<function compute at 0x7f10742463e0>\n",
+       "printer-<function print_pass at 0x7f1074246480>\n",
        "aggregator-<class 'plasma.parallel_processing.communicators.aggregator.Aggregator'>"
       ]
      },
@@ -108,48 +117,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7b7283502ae4021a9ea1d5dc3cfbb17",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/20 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/20 [00:04<?, ?it/s]"
+     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "0.0\n",
-      "1.0\n",
+      "1.0"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  5%|▌         | 1/20 [00:05<00:09,  2.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 2/20 [00:05<00:09,  2.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2.0\n",
-      "3.0\n",
+      "3.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 4/20 [00:06<00:05,  2.91it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "4.0\n",
-      "5.0\n",
+      "5.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 30%|███       | 6/20 [00:07<00:05,  2.39it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "6.0\n",
-      "7.0\n",
+      "7.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 8/20 [00:08<00:05,  2.22it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "8.0\n",
-      "9.0\n",
+      "9.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 10/20 [00:09<00:04,  2.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "10.0\n",
-      "11.0\n",
+      "11.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 12/20 [00:10<00:03,  2.08it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "12.0\n",
-      "13.0\n",
-      "14.0\n",
+      "13.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 14/20 [00:11<00:02,  2.06it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "15.0\n",
+      "14.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 16/20 [00:12<00:01,  2.04it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "16.0\n",
-      "17.0\n",
+      "17.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 18/20 [00:13<00:00,  2.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "18.0\n",
-      "19.0\n",
-      "[0, 32, 64, 96, 128, 160, 192, 224, 256, 288, 320, 352, 384, 416, 448, 480, 512, 544, 576, 608]\n"
+      "19.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:14<00:00,  1.43it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 32, 64, 96, 128, 160, 192, 224, 256, 288, 320, 352, 384, 416, 480, 448, 512, 544, 576, 608]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -164,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
