remove manager overhead of shared list

--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -60,13 +60,13 @@
      "data": {
       "text/plain": [
        "compute1-<class '__main__.Inner'>\n",
-       "\tcompute1-<function compute at 0x7f10742463e0>\n",
-       "\tcompute2-<function compute at 0x7f10742463e0>\n",
-       "compute2-<function compute at 0x7f10742463e0>\n",
+       "\tcompute1-<function compute at 0x7ff9513800e0>\n",
+       "\tcompute2-<function compute at 0x7ff9513800e0>\n",
+       "compute2-<function compute at 0x7ff9513800e0>\n",
        "compute3-<class '__main__.Inner'>\n",
-       "\tcompute1-<function compute at 0x7f10742463e0>\n",
-       "\tcompute2-<function compute at 0x7f10742463e0>\n",
-       "printer-<function print_pass at 0x7f1074246480>\n",
+       "\tcompute1-<function compute at 0x7ff9513800e0>\n",
+       "\tcompute2-<function compute at 0x7ff9513800e0>\n",
+       "printer-<function print_pass at 0x7ff9513c25c0>\n",
        "aggregator-<class 'plasma.parallel_processing.communicators.aggregator.Aggregator'>"
       ]
      },
@@ -124,36 +124,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:04<?, ?it/s]"
+      "  0%|          | 0/20 [00:05<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "1.0"
+      "1.0\n",
+      "0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  5%|▌         | 1/20 [00:05<00:09,  2.00it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|█         | 2/20 [00:05<00:09,  2.00it/s]"
+      " 10%|█         | 2/20 [00:05<00:04,  3.99it/s]"
      ]
     },
     {
@@ -168,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 4/20 [00:06<00:05,  2.91it/s]"
+      " 20%|██        | 4/20 [00:06<00:04,  3.99it/s]"
      ]
     },
     {
@@ -183,7 +169,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 6/20 [00:07<00:05,  2.39it/s]"
+      " 30%|███       | 6/20 [00:07<00:05,  2.74it/s]"
      ]
     },
     {
@@ -198,7 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 8/20 [00:08<00:05,  2.22it/s]"
+      " 40%|████      | 8/20 [00:08<00:05,  2.39it/s]"
      ]
     },
     {
@@ -213,7 +199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 10/20 [00:09<00:04,  2.13it/s]"
+      " 50%|█████     | 10/20 [00:09<00:04,  2.23it/s]"
      ]
     },
     {
@@ -228,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 12/20 [00:10<00:03,  2.08it/s]"
+      " 60%|██████    | 12/20 [00:10<00:03,  2.15it/s]"
      ]
     },
     {
@@ -243,22 +229,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 14/20 [00:11<00:02,  2.06it/s]"
+      " 70%|███████   | 14/20 [00:11<00:02,  2.10it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15.0\n",
-      "14.0\n"
+      "14.0\n",
+      "15.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 16/20 [00:12<00:01,  2.04it/s]"
+      " 80%|████████  | 16/20 [00:12<00:01,  2.06it/s]"
      ]
     },
     {
@@ -273,7 +259,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 18/20 [00:13<00:00,  2.02it/s]"
+      " 90%|█████████ | 18/20 [00:13<00:00,  2.04it/s]"
      ]
     },
     {
@@ -295,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 32, 64, 96, 128, 160, 192, 224, 256, 288, 320, 352, 384, 416, 480, 448, 512, 544, 576, 608]\n"
+      "[32, 0, 64, 96, 128, 160, 192, 224, 256, 288, 320, 352, 384, 416, 448, 480, 512, 544, 576, 608]\n"
      ]
     },
     {
@@ -317,26 +303,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hehe\n"
-     ]
-    }
-   ],
-   "source": [
-    "e = None\n",
-    "try:\n",
-    "    raise Exception('hehe')\n",
-    "except Exception as ex:\n",
-    "    e = ex\n",
-    "\n",
-    "print(e)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
