use thread to improve syncing speed

--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -60,13 +60,13 @@
      "data": {
       "text/plain": [
        "compute1-<class '__main__.Inner'>\n",
-       "\tcompute1-<function compute at 0x7ff9513800e0>\n",
-       "\tcompute2-<function compute at 0x7ff9513800e0>\n",
-       "compute2-<function compute at 0x7ff9513800e0>\n",
+       "\tcompute1-<function compute at 0x7fcaae61c040>\n",
+       "\tcompute2-<function compute at 0x7fcaae61c040>\n",
+       "compute2-<function compute at 0x7fcaae61c040>\n",
        "compute3-<class '__main__.Inner'>\n",
-       "\tcompute1-<function compute at 0x7ff9513800e0>\n",
-       "\tcompute2-<function compute at 0x7ff9513800e0>\n",
-       "printer-<function print_pass at 0x7ff9513c25c0>\n",
+       "\tcompute1-<function compute at 0x7fcaae61c040>\n",
+       "\tcompute2-<function compute at 0x7fcaae61c040>\n",
+       "printer-<function print_pass at 0x7fcaae46e5c0>\n",
        "aggregator-<class 'plasma.parallel_processing.communicators.aggregator.Aggregator'>"
       ]
      },
@@ -124,14 +124,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:05<?, ?it/s]"
+      "  0%|          | 0/20 [00:04<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
       "0.0\n"
      ]
     },
@@ -139,7 +138,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 2/20 [00:05<00:04,  3.99it/s]"
+      "  0%|          | 0/20 [00:05<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 2/20 [00:05<00:04,  4.00it/s]"
      ]
     },
     {
@@ -251,8 +264,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16.0\n",
-      "17.0\n"
+      "17.0\n",
+      "16.0\n"
      ]
     },
     {
@@ -266,8 +279,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18.0\n",
-      "19.0\n"
+      "19.0\n",
+      "18.0\n"
      ]
     },
     {
@@ -281,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[32, 0, 64, 96, 128, 160, 192, 224, 256, 288, 320, 352, 384, 416, 448, 480, 512, 544, 576, 608]\n"
+      "[0, 32, 64, 96, 128, 160, 192, 224, 256, 288, 320, 352, 384, 416, 448, 480, 544, 512, 608, 576]\n"
      ]
     },
     {
