--- a/tests/test_trainer.ipynb
+++ b/tests/test_trainer.ipynb
@@ -21,7 +21,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import plasma.torch as ptorch\n",
     "import torch.optim as opts\n",
@@ -40,8 +49,7 @@
     "@training.wrappers.NanChecker()\n",
     "@training.wrappers.Tensorboard('test')\n",
     "@training.wrappers.GradientClipping()\n",
-    "@training.wrappers.AMP()\n",
-    "class TestTrainer(ptorch.training.BaseTrainer):\n",
+    "class TestTrainer(ptorch.training.Trainer):\n",
     "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -63,13 +71,12 @@
     "\n",
     "        return (y - inputs).mean()\n",
     "    \n",
-    "    def backward(self, bjective_val):\n",
-    "        bjective_val.backward()\n",
+    "    def backward(self, i, inputs, objective_val):\n",
+    "        objective_val.backward()\n",
     "        self.optimizer.step()\n",
     "    \n",
-    "    def finalize_iteration(self):\n",
-    "        if self.scheduler is not None:\n",
-    "            self.scheduler.step()"
+    "    def optimize(self, i, inputs, objective_val):\n",
+    "        super().optimize(i, inputs, objective_val)"
    ]
   },
   {
@@ -87,46 +94,13 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30cf43b5c653498eb05dbcb6bb024b5b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "epoch:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa148e09542a444493fb5798fb8af256",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a7e9a5146244884aa32b8cd4d6e61dd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 604.44it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 3485.38it/s]\n",
+      "epoch: 100%|██████████| 2/2 [00:00<00:00, 91.71it/s]\n"
+     ]
     }
    ],
    "source": [
