--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -2,18 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea\n"
+     ]
+    }
+   ],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import plasma.meta as meta\n",
     "import plasma.functional as F"
@@ -25,17 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "factory = meta.ObjectFactory()\n",
-    "injector = meta.DependencyInjector(factory)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@factory.register('huhu')\n",
     "class HUHU(F.AutoPipe):\n",
     "\n",
     "    def __init__(self, name, age, test=5):\n",
@@ -47,11 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@factory.register('hehe', 'hihi')\n",
     "class HEHE(F.AutoPipe):\n",
     "\n",
     "    def __init__(self, huhu) -> None:\n",
@@ -61,11 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@factory.register('haha')\n",
     "class HAHA(F.AutoPipe):\n",
     "\n",
     "    def __init__(self, hehe, huhu) -> None:\n",
@@ -76,12 +80,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hihi\n",
+       "   |--huhu\n",
+       "      |--name\n",
+       "      |--age\n",
+       "      |--test\n",
+       "----------------------------------------------------------------------------------------------------\n",
+       "haha\n",
+       "   |--hehe\n",
+       "      |--huhu\n",
+       "         |--name\n",
+       "         |--age\n",
+       "         |--test\n",
+       "   |--huhu\n",
+       "      |--name\n",
+       "      |--age\n",
+       "      |--test\n",
+       "----------------------------------------------------------------------------------------------------"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Injector(meta.DependencyInjector):\n",
+    "\n",
+    "    def __init__(self, strict=False):\n",
+    "        super().__init__(strict)\n",
+    "\n",
+    "        self.huhu = HUHU\n",
+    "        self.hehe = self.hihi = HEHE\n",
+    "        self.haha = HAHA\n",
+    "\n",
+    "injector = Injector()\n",
+    "injector"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "objs = injector.run({'name': 'a', 'age': 'hehe'}, 'haha')\n",
+    "objs = Injector().run('haha', name='a', age='hehe')\n",
     "objs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = repr(injector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[*re.finditer(r'(\\|--){1,}', a)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(re.sub(r'(\\|--){1,}', lambda m: m.group(0).replace('|--', ' ' * 3) + '|--', a))"
    ]
   },
   {
