update training wrapper pipeline

--- a/tests/test_trainer.ipynb
+++ b/tests/test_trainer.ipynb
@@ -44,11 +44,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/torch/amp/autocast_mode.py:266: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "@training.wrappers.NanChecker()\n",
-    "@training.wrappers.Tensorboard('test')\n",
-    "@training.wrappers.GradientClipping()\n",
     "class TestTrainer(ptorch.training.Trainer):\n",
     "\n",
     "    def __init__(self):\n",
@@ -65,18 +71,18 @@
     "        ds = ptorch.data.AdhocData([1.0]*10, lambda x: x)\n",
     "        return ds.get_torch_loader(batch_size=1, workers=0)\n",
     "    \n",
+    "    @training.wrappers.Tensorboard('test')\n",
+    "    @ptorch.torch.autocast('cuda', dtype=ptorch.torch.bfloat16)\n",
     "    def forward(self, i, inputs):\n",
     "        self.model.zero_grad()\n",
     "        y = self.model(inputs[np.newaxis].float())\n",
     "\n",
     "        return (y - inputs).mean()\n",
     "    \n",
+    "    @training.wrappers.GradientClipping()\n",
     "    def backward(self, i, inputs, objective_val):\n",
     "        objective_val.backward()\n",
-    "        self.optimizer.step()\n",
-    "    \n",
-    "    def optimize(self, i, inputs, objective_val):\n",
-    "        super().optimize(i, inputs, objective_val)"
+    "        self.optimizer.step()\n"
    ]
   },
   {
@@ -97,15 +103,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 604.44it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 3485.38it/s]\n",
-      "epoch: 100%|██████████| 2/2 [00:00<00:00, 91.71it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 581.69it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 3938.31it/s]\n",
+      "epoch: 100%|██████████| 2/2 [00:00<00:00, 91.23it/s]\n"
      ]
     }
    ],
    "source": [
     "trainer.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import inspect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspect.getfullargspec(trainer.forward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
