add more entry points for dep injector

--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -90,18 +90,18 @@
        "   |--huhu\n",
        "      |--name\n",
        "      |--age\n",
-       "      |--test\n",
+       "      |--test=<class 'int'>\n",
        "----------------------------------------------------------------------------------------------------\n",
        "haha\n",
        "   |--hehe\n",
        "      |--huhu\n",
        "         |--name\n",
        "         |--age\n",
-       "         |--test\n",
+       "         |--test=<class 'int'>\n",
        "   |--huhu\n",
        "      |--name\n",
        "      |--age\n",
-       "      |--test\n",
+       "      |--test=<class 'int'>\n",
        "----------------------------------------------------------------------------------------------------"
       ]
      },
@@ -126,48 +126,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': plasma.meta.dependency_injector._NotInitialized,\n",
+       " 'age': plasma.meta.dependency_injector._NotInitialized,\n",
+       " 'test': 5}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "injector.injection_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'haha': HAHA(\n",
+       "   hehe=HEHE(\n",
+       "     huhu=HUHU(\n",
+       "       name='a',\n",
+       "       age='hehe',\n",
+       "       test=5,\n",
+       "     ),\n",
+       "   ),\n",
+       "   huhu=HUHU(\n",
+       "     name='a',\n",
+       "     age='hehe',\n",
+       "     test=5,\n",
+       "   ),\n",
+       " )}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "objs = Injector().run('haha', name='a', age='hehe')\n",
     "objs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = repr(injector)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[*re.finditer(r'(\\|--){1,}', a)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(re.sub(r'(\\|--){1,}', lambda m: m.group(0).replace('|--', ' ' * 3) + '|--', a))"
    ]
   },
   {
