add inspect to injector

--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -156,17 +156,9 @@
       "text/plain": [
        "{'haha': HAHA(\n",
        "   hehe=HEHE(\n",
-       "     huhu=HUHU(\n",
-       "       name='a',\n",
-       "       age='hehe',\n",
-       "       test=5,\n",
-       "     ),\n",
+       "     huhu=8,\n",
        "   ),\n",
-       "   huhu=HUHU(\n",
-       "     name='a',\n",
-       "     age='hehe',\n",
-       "     test=5,\n",
-       "   ),\n",
+       "   huhu=8,\n",
        " )}"
       ]
      },
@@ -176,7 +168,7 @@
     }
    ],
    "source": [
-    "objs = Injector().run('haha', name='a', age='hehe')\n",
+    "objs = Injector().run('haha', huhu=8)\n",
     "objs"
    ]
   },
